examples/test/testpolicy6394.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6394
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key44: value18
      key40: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value33
      podSelector:
        matchLabels:
          key34: value39
          key8: value34
